# Nourisha

./: .breakpoints  .replit  10443.py  README.md  __init__.py  app.py  config.py  create_admin_user.py  gunicorn_config.py  package-lock.json  package.json  pyproject.toml  render.yaml  replit.nix  requirements.txt  utils.py  wsgi
alembic/: env.py
app/: __init__.py  config.py  forms.py  models.py  routes.py
app/admin/: .routes.py.1249917639~  __init__.py  routes.py
app/auth/: __init__.py  routes.py
app/cart/: __init__.py  routes.py
app/main/: __init__.py  forms.py  models.py  routes.py  send_email.py  views.py
app/messages/: __init__.py  routes.py
app/payments/: __init__.py  routes.py  safaricom.py
app/product/: __init__.py  routes.py
app/role/: __init__.py  routes.py
app/site_setting/: routes.py
app/templ/: checkout.html
app/templates/: about_us.html  add.product.html  add_location.html  add_product.html  add_product_category.html  add_product_image.html  add_role.html  add_supplier.html  add_unit_of_measurement.html  add_variety.html  admin_dashboard.html  admin_payments.html  admin_shop_for_user.html  analysis.html  assign_role.html  base.html  change_password.html  checkout.html  confirmation_email.html  contact.html  delivery_personnel_dashboard.html  edit_blog.html  edit_offer.html  edit_profile.html  edit_role.html  edit_user.html  home (copy).html  home.html  layout.html  layout1.html  loader.html  (+38 more)
logs/: grocery_store.log.1  grocery_store.log.2  grocery_store.log.3  grocery_store.log.4  grocery_store.log.8
migrations/: alembic.ini
(+70 files in other folders)
